--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node-sass": "4.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-gallery": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
